<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="Wlc">Welcome to Android!</string>
    <string name="bt2">Button 2</string>
    <string name="bt1">Button 1</string>
    <string name="LT">Large Text</string>
    <string name="nm">Name:</string>
    <string name="Pass">Password:</string>
    <string name="LG">LOGIN</string>
    <string name="CL">CANCEL</string>
</resources>